@@ -84,7 +84,6 @@ class DAnCE_NodeManager_Module
     const ACE_TCHAR * domain_nc_;
     const ACE_TCHAR * instance_nc_;
     unsigned int threads_;
-    bool best_effort_;
     std::string locality_config_;
     std::string node_config_;
     SOptions();
